{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 199,
  "lineage": "fe297368-db9d-c3ea-f400-f6da5874ad11",
  "resources": [
    {
      "module": "module.alb_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-app/e9dfb5e97e3cfe47",
            "arn_suffix": "app/dev-app/e9dfb5e97e3cfe47",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-dev-app-730010928.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-app/e9dfb5e97e3cfe47",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a100164d0c4b622d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04631b612858d200a"
              },
              {
                "subnet_id": "subnet-0c20d306229d26445"
              }
            ],
            "subnets": [
              "subnet-04631b612858d200a",
              "subnet-0c20d306229d26445"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:listener/app/dev-app/e9dfb5e97e3cfe47/ac6c8973a6c7946b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-app-tg/d25151bbd43d955d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:listener/app/dev-app/e9dfb5e97e3cfe47/ac6c8973a6c7946b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-app/e9dfb5e97e3cfe47",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_app.aws_lb.this",
            "module.alb_app.aws_lb_target_group.this",
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-app-tg/d25151bbd43d955d",
            "arn_suffix": "targetgroup/dev-app-tg/d25151bbd43d955d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-app-tg/d25151bbd43d955d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-app/e9dfb5e97e3cfe47"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_web",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-web/0aba2fd669764dd9",
            "arn_suffix": "app/dev-web/0aba2fd669764dd9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-web-467076164.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-web/0aba2fd669764dd9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-web",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00dc1f1236ff2cb9d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087e9f7bbd85d2bf9"
              },
              {
                "subnet_id": "subnet-0fd517c18ba1ce29c"
              }
            ],
            "subnets": [
              "subnet-087e9f7bbd85d2bf9",
              "subnet-0fd517c18ba1ce29c"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_web",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:listener/app/dev-web/0aba2fd669764dd9/c94601951bec654b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-web-tg/d81356a9694ee7db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:listener/app/dev-web/0aba2fd669764dd9/c94601951bec654b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-web/0aba2fd669764dd9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_web.aws_lb.this",
            "module.alb_web.aws_lb_target_group.this",
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_web",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-web-tg/d81356a9694ee7db",
            "arn_suffix": "targetgroup/dev-web-tg/d81356a9694ee7db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:targetgroup/dev-web-tg/d81356a9694ee7db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:590183972842:loadbalancer/app/dev-web/0aba2fd669764dd9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "KTB-personal-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0a100164d0c4b622d",
            "description": "Internal ALB for app layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a100164d0c4b622d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023cb301bbe6c5dbf"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "alb-app-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "alb-app-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-app-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-00dc1f1236ff2cb9d",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc1f1236ff2cb9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "alb-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0b29cd4ec0abd911b",
            "description": "Allow traffic from app alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b29cd4ec0abd911b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a100164d0c4b622d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "app-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0b7dd6e22f58d5ed9",
            "description": "Allow SSH from Developer",
            "egress": [],
            "id": "sg-0b7dd6e22f58d5ed9",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bastion-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0c4a45b1de42eaa05",
            "description": "Allow traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4a45b1de42eaa05",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b29cd4ec0abd911b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "db-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "db-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-023cb301bbe6c5dbf",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023cb301bbe6c5dbf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dc1f1236ff2cb9d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "web-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2101650651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00dc1f1236ff2cb9d",
            "security_group_rule_id": "sgr-07c114f39191b91fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-357852307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00dc1f1236ff2cb9d",
            "security_group_rule_id": "sgr-034fdc4f02a1e6597",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2601785703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a100164d0c4b622d",
            "security_group_rule_id": "sgr-0fd2f13f3d7b982f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3512519532",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00dc1f1236ff2cb9d",
            "security_group_rule_id": "sgr-08bcaa528b56f9e6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-999789358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b29cd4ec0abd911b",
            "security_group_rule_id": "sgr-0b72ca5cc59566ada",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "bastion-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1194458425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b7dd6e22f58d5ed9",
            "security_group_rule_id": "sgr-0ce0173e3905a44f1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2318631719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c4a45b1de42eaa05",
            "security_group_rule_id": "sgr-0dcfc795c006fa775",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3159527122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-023cb301bbe6c5dbf",
            "security_group_rule_id": "sgr-0a47d2aeb6187e96c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ref_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-from-web",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2370409075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a100164d0c4b622d",
            "security_group_rule_id": "sgr-0150e9d6462769d26",
            "self": false,
            "source_security_group_id": "sg-023cb301bbe6c5dbf",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-from-alb-app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1116248560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b29cd4ec0abd911b",
            "security_group_rule_id": "sgr-0c4f50d5db1386040",
            "self": false,
            "source_security_group_id": "sg-0a100164d0c4b622d",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-from-app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2310806641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c4a45b1de42eaa05",
            "security_group_rule_id": "sgr-043e3634a17981897",
            "self": false,
            "source_security_group_id": "sg-0b29cd4ec0abd911b",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-from-alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1476420856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-023cb301bbe6c5dbf",
            "security_group_rule_id": "sgr-0f3e04826246d411c",
            "self": false,
            "source_security_group_id": "sg-00dc1f1236ff2cb9d",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-from-bastion",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3985533588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-023cb301bbe6c5dbf",
            "security_group_rule_id": "sgr-05254b20db4758b0d",
            "self": false,
            "source_security_group_id": "sg-0b7dd6e22f58d5ed9",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02da6ff56d4014653",
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:elastic-ip/eipalloc-02da6ff56d4014653",
            "association_id": "eipassoc-00c011814b81da615",
            "domain": "vpc",
            "id": "eipalloc-02da6ff56d4014653",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08c69821d9aff124b",
            "private_dns": "ip-10-1-1-69.ap-northeast-2.compute.internal",
            "private_ip": "10.1.1.69",
            "public_dns": "ec2-52-79-58-59.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.58.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fa7e3f96f5c9365",
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:elastic-ip/eipalloc-06fa7e3f96f5c9365",
            "association_id": "eipassoc-03ad0cdb1df6d3e4a",
            "domain": "vpc",
            "id": "eipalloc-06fa7e3f96f5c9365",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-060df6fa078b0b0e1",
            "private_dns": "ip-10-1-2-90.ap-northeast-2.compute.internal",
            "private_ip": "10.1.2.90",
            "public_dns": "ec2-13-124-159-199.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.159.199",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:internet-gateway/igw-0616b0400f76c179a",
            "id": "igw-0616b0400f76c179a",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02da6ff56d4014653",
            "association_id": "eipassoc-00c011814b81da615",
            "connectivity_type": "public",
            "id": "nat-0c3dc7ecf6f434b32",
            "network_interface_id": "eni-08c69821d9aff124b",
            "private_ip": "10.1.1.69",
            "public_ip": "52.79.58.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087e9f7bbd85d2bf9",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-natgw-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-natgw-ap-northeast-2a",
              "Project": "KTB-personal-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fa7e3f96f5c9365",
            "association_id": "eipassoc-03ad0cdb1df6d3e4a",
            "connectivity_type": "public",
            "id": "nat-00f9813d7ce227d94",
            "network_interface_id": "eni-060df6fa078b0b0e1",
            "private_ip": "10.1.2.90",
            "public_ip": "13.124.159.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd517c18ba1ce29c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-natgw-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-natgw-ap-northeast-2c",
              "Project": "KTB-personal-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-078f0d74c4335b7ec",
            "id": "rtb-078f0d74c4335b7ec",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3dc7ecf6f434b32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-07bf4b8889a8ea787",
            "id": "rtb-07bf4b8889a8ea787",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f9813d7ce227d94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-rt-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-0e8ffe3d2f957fc49",
            "id": "rtb-0e8ffe3d2f957fc49",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0616b0400f76c179a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.1.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ab2c1bc02f854a0",
            "route_table_id": "rtb-078f0d74c4335b7ec",
            "subnet_id": "subnet-0af6e03f172dfe4fb"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.1.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3284953d7e90c5b",
            "route_table_id": "rtb-078f0d74c4335b7ec",
            "subnet_id": "subnet-0c20d306229d26445"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.1.7.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfcc619cfe159eb4",
            "route_table_id": "rtb-078f0d74c4335b7ec",
            "subnet_id": "subnet-034846eba5096a603"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393b7d56fb7f6a81",
            "route_table_id": "rtb-07bf4b8889a8ea787",
            "subnet_id": "subnet-0ce7bbebc0b7eba45"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01690cf7a6d1a68d4",
            "route_table_id": "rtb-07bf4b8889a8ea787",
            "subnet_id": "subnet-04631b612858d200a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.8.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e2c3a0979ef9247",
            "route_table_id": "rtb-07bf4b8889a8ea787",
            "subnet_id": "subnet-0309b80a850eafb9d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.1.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7114f9ead1f970f",
            "route_table_id": "rtb-0e8ffe3d2f957fc49",
            "subnet_id": "subnet-087e9f7bbd85d2bf9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c54b243b0e834a5",
            "route_table_id": "rtb-0e8ffe3d2f957fc49",
            "subnet_id": "subnet-0fd517c18ba1ce29c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-087e9f7bbd85d2bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087e9f7bbd85d2bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0af6e03f172dfe4fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af6e03f172dfe4fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-web-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-web-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.1.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0c20d306229d26445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c20d306229d26445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-app-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-app-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.1.7.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-034846eba5096a603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034846eba5096a603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0fd517c18ba1ce29c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd517c18ba1ce29c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0ce7bbebc0b7eba45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce7bbebc0b7eba45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-web-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-web-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-04631b612858d200a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04631b612858d200a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-app-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-app-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.1.8.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0309b80a850eafb9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309b80a850eafb9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0cf73d4f31fd89ec3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:vpc/vpc-0cf73d4f31fd89ec3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bc548933402ce6c3",
            "default_route_table_id": "rtb-082e03ccf3cbc21aa",
            "default_security_group_id": "sg-08d8e663d8213d8dd",
            "dhcp_options_id": "dopt-0c2a02f151f60cfe0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf73d4f31fd89ec3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082e03ccf3cbc21aa",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Project": "KTB-personal-project"
            }
          }
        }
      ]
    }
  ]
}